--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,6 @@
-asgiref==3.7.2
 Django==4.2.5
 django-cors-headers==4.2.0
 djangorestframework==3.14.0
-pytz==2023.3.post1
-sqlparse==0.4.4
-typing_extensions==4.8.0
-tzdata==2023.3
+psycopg2-binary==2.9.7
+redis==5.0.0
+django-redis==5.3.0
