--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,8 @@ services:
 
   db:
     image: postgres:alpine
+    ports:
+      - "5433:5432"
     volumes:
       - db-data:/var/lib/postgresql/data
     env_file:
