add djoser, implement authentication with jwt token, google oauth

--- a/.env.sample
+++ b/.env.sample
@@ -2,10 +2,14 @@ DB_HOST=db
 DB_NAME
 DB_USER
 DB_PASSWORD
+DB_PORT=5432
 
 REDIS_HOST=redis
 REDIS_PORT=6379
 
 SECRET_KEY
 DEBUG
-ALLOWED_HOSTS
+ALLOWED_HOSTS=127.0.0.1,localhost,0.0.0.0
+
+SOCIAL_AUTH_GOOGLE_OAUTH2_KEY
+SOCIAL_AUTH_GOOGLE_OAUTH2_SECRET
