--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,7 @@ djangorestframework==3.14.0
 psycopg2-binary==2.9.7
 redis==5.0.0
 django-redis==5.3.0
+djoser==2.2.0
+drf-spectacular==0.26.5
+social-auth-app-django==5.3.0
+djangorestframework-simplejwt==5.3.0
