--- a/.env.sample
+++ b/.env.sample
@@ -9,7 +9,13 @@ REDIS_PORT=6379
 
 SECRET_KEY
 DEBUG
-ALLOWED_HOSTS=127.0.0.1,localhost,0.0.0.0
+ALLOWED_HOSTS
 
 SOCIAL_AUTH_GOOGLE_OAUTH2_KEY
 SOCIAL_AUTH_GOOGLE_OAUTH2_SECRET
+
+EMAIL_HOST_USER
+EMAIL_HOST_PASSWORD
+
+PASSWORD_RESET_CONFIRM_URL
+CLIENT_DOMAIN
