--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -6,9 +6,36 @@ jobs:
   test-lint:
     name: Run lint and tests
     runs-on: ubuntu-latest
+
+    env:
+      DB_HOST: ${{ secrets.DB_HOST }}
+      DB_NAME: ${{ secrets.DB_NAME }}
+      DB_USER: ${{ secrets.DB_USER }}
+      DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+      DB_PORT: ${{ secrets.DB_PORT }}
+      REDIS_HOST: ${{ secrets.REDIS_HOST }}
+      REDIS_PORT: ${{ secrets.REDIS_PORT }}
+      SECRET_KEY: ${{ secrets.SECRET_KEY }}
+      ALLOWED_HOSTS: ${{ secrets.ALLOWED_HOSTS }}
+
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+
+
+      - name: Export all secrets to .env file
+        run: |
+          echo "DB_HOST=${DB_HOST}" > .env
+          echo "DB_NAME=${DB_NAME}" >> .env
+          echo "DB_USER=${DB_USER}" >> .env
+          echo "DB_PASSWORD=${DB_PASSWORD}" >> .env
+          echo "DB_PORT=${DB_PORT}" >> .env
+          echo "REDIS_HOST=${REDIS_HOST}" >> .env
+          echo "REDIS_PORT=${REDIS_PORT}" >> .env
+          echo "SECRET_KEY=${SECRET_KEY}" >> .env
+          echo "DEBUG=${DEBUG}" >> .env
+          echo "ALLOWED_HOSTS=${ALLOWED_HOSTS}" >> .env
+
       - name: Lint
         run: docker-compose run --rm app sh -c "ruff check ."
       - name: Test
