--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,18 @@
 [tool.ruff]
 
+line-length=120
+
 select = [
     "E",
     "F",
     "W",
     "N",
     "UP",
+    "I",
+    "S",
+    "A",
+    "DJ",
+    "RET",
 ]
 
 exclude = [
