--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -22,7 +22,6 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-
       - name: Export all secrets to .env file
         run: |
           echo "DB_HOST=${DB_HOST}" > .env
@@ -36,7 +35,11 @@ jobs:
           echo "DEBUG=${DEBUG}" >> .env
           echo "ALLOWED_HOSTS=${ALLOWED_HOSTS}" >> .env
 
+      - name: Build Docker images
+        run: docker-compose build
+
       - name: Lint
         run: docker-compose run --rm app sh -c "ruff check ."
+
       - name: Test
         run: docker-compose run --rm app sh -c "python manage.py test"
