--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -35,8 +35,14 @@ jobs:
           echo "DEBUG=${DEBUG}" >> .env
           echo "ALLOWED_HOSTS=${ALLOWED_HOSTS}" >> .env
 
-      - name: Build Docker images
-        run: docker-compose build
+      - uses: docker/setup-buildx-action@v1
+      - uses: docker/build-push-action@v2
+        with:
+          context: .
+          load: true
+          tags: app-image
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
       - name: Lint
         run: docker-compose run --rm app sh -c "ruff check ."
