--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,4 @@ drf-spectacular==0.26.5
 social-auth-app-django==5.3.0
 djangorestframework-simplejwt==5.3.0
 ruff==0.0.291
+drf-nested-routers==0.93.4
