Add push notification via WebSockets

--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,6 @@ djangorestframework-simplejwt==5.3.0
 ruff==0.0.291
 drf-nested-routers==0.93.4
 Pillow==10.0.1
+channels==4.0.0
+channels-redis==4.1.0
+daphne==4.0.0
